Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-07-07 (SVN):
    * Bump beta version/date to 1.5.0-rc5/2011-07-07, update documents.

2011-07-07 (SVN):
    * pr_exec.c (PR_ExecuteProgram):  Implemented some of LordHavoc's
      optimizations mostly by removing the temoprary eval_t a*,*b and *c
      variables and replacing them by OPA, OPB and OPC macros. Removed
      the statement index s and used the statement pointer instead,
      updating the pr_xstatement global whenever necessary. Moved the i,
      startFrame, endFrame and val variables from toplevel context to
      case context.  Removed Raven's pentium-specific timesnap code.
      Updated profiling code.  These changes, specifically the temporary
      eval_t pointers' removal, cures a miscompilation by ancient gcc
      versions <= 2.95.x:  With PR_RunError() marked with the noreturn
      attribute, compiling with the -fomit-frame-pointer switch resulted
      in bad code which segfaulted. Now those old compiler are just OK
      with this combination, too.

2011-07-05 (SVN):
    * oslibs/dos/djlib/vsnprntf.c: Added compatibility macro for _IONTERM.

2011-07-05 (SVN):
    * docs: Updated compilation instructions and recommened software.

2011-07-05 (SVN):
    * Updated makefiles with dos targets to add $(OSLIBS)/dos to includes
      path.

2011-07-05 (SVN):
    * libs/common/q_stdint.h: Added new shared header to include a proper
      stdint.h.  Included this new header in other places.

2011-07-05 (SVN):
    * oslibs/dos/djstdint/stdint.h, inttypes.h: Added from djgpp v2.04 for
      use with older djgpp versions.
    * oslibs/dos/djstdint: Added new djstdint directory.

2011-07-05 (SVN):
    * oslibs/dos/djlib/vsnprntf.c: Added vsnprintf() from djgpp v2.04 for
      use with older djgpp versions.
    * oslibs/dos/djlib: Added new djlib directory.

2011-07-03 (SVN):
    * gamecode/hc/h2/pstboar.hc: commented out unreferenced create_swarm()