@@ -72,8 +72,8 @@ typedef struct texture_s
 #define SURF_DRAWTURB		0x10
 #define SURF_DRAWTILED		0x20
 #define SURF_DRAWBACKGROUND	0x40
-#define SURF_UNDERWATER		0x80
-#define SURF_TRANSLUCENT	0x100
+#define SURF_TRANSLUCENT	0x80	/* r_edge.asm checks this */
+#define SURF_UNDERWATER		0x100
 #define SURF_DRAWBLACK		0x200
 
 // !!! if this is changed, it must be changed in asm_draw.h too !!!
@@ -111,7 +111,7 @@ typedef struct msurface_s
 
 	int		firstedge;	// look up in model->surfedges[], negative numbers
 	int		numedges;	// are backwards edges
-	
+
 	short		texturemins[2];
 	short		extents[2];
 
@@ -121,7 +121,7 @@ typedef struct msurface_s
 	struct	msurface_s	*texturechain;
 
 	mtexinfo_t	*texinfo;
-	
+
 // lighting info
 	int		dlightframe;
 	int		dlightbits;
@@ -138,7 +138,7 @@ typedef struct mnode_s
 // common with leaf
 	int		contents;		// 0, to differentiate from leafs
 	int		visframe;		// node needs to be traversed if current
-	
+
 	float		minmaxs[6];		// for bounding box culling
 
 	struct mnode_s	*parent;
@@ -150,7 +150,6 @@ typedef struct mnode_s
 	unsigned short	firstsurface;
 	unsigned short	numsurfaces;
 } mnode_t;
-
 
 
 typedef struct mleaf_s
@@ -165,7 +164,7 @@ typedef struct mleaf_s
 
 // leaf specific
 	byte		*compressed_vis;
-	efrag_t		*efrags;
+	struct efrag_s	*efrags;
 
 	msurface_t	**firstmarksurface;
 	int		nummarksurfaces;
@@ -371,7 +370,7 @@ typedef struct qmodel_s
 	modtype_t	type;
 	int		numframes;
 	synctype_t	synctype;
-	
+
 	int		flags;
 	int		ex_flags;
 
@@ -434,7 +433,6 @@ typedef struct qmodel_s
 	cache_user_t	cache;		// only access through Mod_Extradata
 
 	float		glow_color[4];
-
 } qmodel_t;
 
 // values for qmodel_t->needload
